--- a/public/css/admin_custom.css
+++ b/public/css/admin_custom.css
@@ -1,5 +1,5 @@
 .thead-theme-dark-red {
-    background-color: #973034 !important;
+    background-color: #dc3545 !important;
     border-color: #4b545c !important;
     color: #fdfeff;
     font-size: .9rem;
@@ -9,33 +9,33 @@
 .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #973034;
+    background-color: #dc3545;
 }
 
 .page-item.active .page-link {
     z-index: 3;
     color: #fff;
-    background-color: #973034;
-    border-color: #973034;
+    background-color: #dc3545;
+    border-color: #dc3545;
 }
 
 a.page-link {
     z-index: 2;
-    color: #973034;
+    color: #dc3545;
     text-decoration: none;
     border-color: #dee2e6;
 }
 
 .page-link:hover {
     z-index: 2;
-    color: #973034;
+    color: #dc3545;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #dee2e6;
 }
 
 a.dt_actions {
-    color: #973034 !important;
+    color: #dc3545 !important;
     text-decoration: none;
     background-color: transparent;
     cursor: pointer;
@@ -50,14 +50,14 @@ a.dt_actions:hover {
 .pace .pace-activity, .pace .pace-activity:before {
     position: absolute;
     display: block;
-    border-color: #973034 transparent transparent;
+    border-color: #dc3545 transparent transparent;
     border-radius: 50%;
 }
 
 .btn-danger {
     color: #fff;
-    background-color: #973034;
-    border-color: #973034;
+    background-color: #dc3545;
+    border-color: #dc3545;
     box-shadow: none;
 }
 
@@ -65,4 +65,48 @@ a.dt_actions:hover {
     color: #fff;
     background-color: #e42223;
     border-color: #e42223;
+}
+
+input[type=search] {
+    background: none;
+    margin-bottom: 15px!important;
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid #ced4da;
+    box-shadow: none;
+    padding: 0px;
+    color: #495057 !important;
+}
+
+input[type=search]:focus {
+    color: #495057 !important;
+    background-color: #fff !important;
+    border-color: #dc3545 !important;
+    outline: 0;box-shadow: inset 0 0 0 transparent;    
+}
+
+div.dataTables_wrapper div.dataTables_paginate ul.pagination {
+    margin: 10px 0 !important;
+}
+
+.pagination {
+    border-radius: 0px;
+}
+
+input[type=text] {
+    background: none;
+    margin-bottom: 15px!important;
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid #ced4da;
+    box-shadow: none;
+    padding: 0px;
+    color: #495057 !important;
+}
+
+input[type=text]:focus {
+    color: #495057 !important;
+    background-color: #fff !important;
+    border-color: #dc3545 !important;
+    outline: 0;box-shadow: inset 0 0 0 transparent;    
 }
