Reports view and chartjs integration

--- a/public/css/admin_custom.css
+++ b/public/css/admin_custom.css
@@ -110,3 +110,19 @@ input[type=text]:focus {
     border-color: #dc3545 !important;
     outline: 0;box-shadow: inset 0 0 0 transparent;    
 }
+
+.chart-container {
+    position: relative; 
+    width: 75%;
+}
+
+@media only screen and (max-width: 600px) {
+    .chart-container {
+        width: 100%;
+        padding-right: var(--bs-gutter-x, 0.75rem);
+        padding-left: var(--bs-gutter-x, 0.75rem);
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
