--- a/public/css/admin_custom.css
+++ b/public/css/admin_custom.css
@@ -39,6 +39,7 @@ a.dt_actions {
     text-decoration: none;
     background-color: transparent;
     cursor: pointer;
+    margin-left: 5px;
 }
 
 a.dt_actions:hover {
@@ -114,6 +115,11 @@ input[type=text]:focus {
 .chart-container {
     position: relative; 
     width: 75%;
+}
+
+[class*=sidebar-dark-] .nav-treeview>.nav-item>.nav-link.active, [class*=sidebar-dark-] .nav-treeview>.nav-item>.nav-link.active:focus, [class*=sidebar-dark-] .nav-treeview>.nav-item>.nav-link.active:hover {
+    background-color: rgba(255,255,255,.6);
+    color: #343a40;
 }
 
 @media only screen and (max-width: 600px) {
